test/fail/interpolation/interp_multi_expr.lily
#[
SyntaxError: Interpolation block must be a single expression.
    from interp_multi_expr.lily:6:
]#

var v = $"^(10 20)"
